Deployment/google-cloud/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: google-cloud-cert 
spec:
  rules:
  - host: conductor.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conductor
            port:
              number: 80

  #
  - host: signalling.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signalling
            port:
              number: 80


  - host: slavemanager.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slavemanager
            port:
              number: 80

  - host: document.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: document
            port:
              number: 80

  - host: thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page
            port:
              number: 80

  - host: service.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-page
            port:
              number: 80

  - host: admin.thinkmay.net
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: admin-page
            port:
              number: 80

  - host: database.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dbmanager
            port:
              number: 80
